--- a/aboutMe.html
+++ b/aboutMe.html
@@ -12,13 +12,34 @@
 
 <body>
     <h1 class="display-1">Jacob Morrow</h1>
-    <nav class="nav">
-        <h3 class="display-7"><a href="index.html">Home</a> <a href="projects.html">Projects</a> <a href="experience.html">Experience</a></h3>
-    </nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link"href="projects.html">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="experience.html">Experience</a>
+            </li>
+    
+            <li class="nav-item">
+              <a class="nav-link" href="#">About Me</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    <br>
     <main>
-        <div><img src="imgs/profile.png"></div>
-        <p>B.S. in Psychology with a minor in Informatics from the University of Illinois: Urbana-Champaign. Strong academic background with Python and R, alongside experience with HTML+CSS, and JavaScript. Driven by the foundations established through Informatics, currently completing a B.S. in Computer Science at Oregon State University and set to graduate in 2022.</p>
-    <p>In my free time, I am passionate about computer hardware and enjoy working with the PC I built. I’m also currently spending my time printing on my Ender 3, FDM 3D printer, learning how to best realize its potential.</p></main>
+        <img src="imgs/profile.png" alt="picture of myself outside Japan House @ UIUC"  class="img-circle">
+        <p class="lead">B.S. in Psychology with a minor in Informatics from the University of Illinois: Urbana-Champaign. Strong academic background with Python and R, alongside experience with HTML+CSS, and JavaScript. Driven by the foundations established through Informatics, currently completing a B.S. in Computer Science at Oregon State University and set to graduate in 2022.</p>
+    <p class="lead">In my free time, I am passionate about computer hardware and enjoy working with the PC I built. I’m also currently spending my time printing on my Ender 3, FDM 3D printer, learning how to best realize its potential.</p></main>
     <div id="root"></div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
         integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous">
