--- a/index.html
+++ b/index.html
@@ -13,9 +13,30 @@
 
 <body>
   <h1 class="display-1">Jacob Morrow</h1>
-  <nav class="nav">
-    <h3 class="display-7"><a href="projects.html">Projects</a> <a href="experience.html">Experience</a> <a href="aboutMe.html">About Me</a></h3>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link"href="projects.html">Projects</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="experience.html">Experience</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="aboutMe.html">About Me</a>
+        </li>
+      </ul>
+    </div>
   </nav>
+ 
   <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
