--- a/projects.html
+++ b/projects.html
@@ -12,25 +12,46 @@
 
 <body>
     <h1 class="display-1">Jacob Morrow</h1>
-    <nav class="nav">
-    <h3 class="display-7"><a href="index.html">Home</a> <a href="experience.html">Experience</a> <a href="aboutMe.html">About Me</a></h3>
-    </nav>
-    Focus Boardgame &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Python, VSCode <a href="https://github.com/Morrow98J">GitHub</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link"href="#">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="experience.html">Experience</a>
+            </li>
+    
+            <li class="nav-item">
+              <a class="nav-link" href="aboutMe.html">About Me</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    <br>
+    <p class="lead">Focus Boardgame &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Python, VSCode <a href="https://github.com/Morrow98J">GitHub</a></p>
     <p>lorem ipsum dolor sit amet, consectet Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque laborum a tenetur dolorem deserunt quas, odio mollitia culpa est accusantium facilis esse aliquid sequi dolor eius enim maiores soluta rerum?
     Iure tenetur consequuntur neque ut quos qui autem quis illo asperiores accusantium rerum quas atque doloremque, veritatis odit, enim sit dignissimos aliquid? Commodi possimus dolores laudantium sunt iure accusamus? Dolorum?
     Autem ipsum, ipsa possimus atque labore, recusandae nemo odit saepe veritatis a eos architecto eius reprehenderit adipisci impedit explicabo debitis perspiciatis ratione esse ex. Consectetur nam molestias assumenda quos a?</p>
 
-    Low Level IO &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; MASM Assembly, Visual Studio 2019 <a href="https://github.com/Morrow98J">GitHub</a>
+    <p class="lead">Low Level IO &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; MASM Assembly, Visual Studio 2019 <a href="https://github.com/Morrow98J">GitHub</a></p>
     <p>lorem ipsum dolor sit amet, consectet Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque laborum a tenetur dolorem deserunt quas, odio mollitia culpa est accusantium facilis esse aliquid sequi dolor eius enim maiores soluta rerum?
     Iure tenetur consequuntur neque ut quos qui autem quis illo asperiores accusantium rerum quas atque doloremque, veritatis odit, enim sit dignissimos aliquid? Commodi possimus dolores laudantium sunt iure accusamus? Dolorum?
     Autem ipsum, ipsa possimus atque labore, recusandae nemo odit saepe veritatis a eos architecto eius reprehenderit adipisci impedit explicabo debitis perspiciatis ratione esse ex. Consectetur nam molestias assumenda quos a?</p>
 
-    Harry Potter NLP Analysis &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Python, NumPy, Matplotlib, Jupyter Notebook <a href="https://github.com/Morrow98J">GitHub</a>
+    <p class="lead">Harry Potter NLP Analysis &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Python, NumPy, Matplotlib, Jupyter Notebook <a href="https://github.com/Morrow98J">GitHub</a></p>
     <p>lorem ipsum dolor sit amet, consectet Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque laborum a tenetur dolorem deserunt quas, odio mollitia culpa est accusantium facilis esse aliquid sequi dolor eius enim maiores soluta rerum?
     Iure tenetur consequuntur neque ut quos qui autem quis illo asperiores accusantium rerum quas atque doloremque, veritatis odit, enim sit dignissimos aliquid? Commodi possimus dolores laudantium sunt iure accusamus? Dolorum?
     Autem ipsum, ipsa possimus atque labore, recusandae nemo odit saepe veritatis a eos architecto eius reprehenderit adipisci impedit explicabo debitis perspiciatis ratione esse ex. Consectetur nam molestias assumenda quos a?</p>
 
-    This Website &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; HTML+CSS, JavaScript, Bootstrap, Github Atom <a href="https://github.com/Morrow98J">GitHub</a>
+    <p class="lead">This Website &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; HTML+CSS, JavaScript, Bootstrap, Github Atom <a href="https://github.com/Morrow98J">GitHub</a></p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut tempora optio perspiciatis? Nemo dolores nulla hic maiores est esse eveniet quo tempore aspernatur ipsam, sequi non asperiores, obcaecati ullam? Distinctio.
     Accusamus natus, hic laudantium quo et voluptatem nihil harum, possimus quae asperiores voluptatibus accusantium corrupti, ex eius suscipit. Explicabo necessitatibus quam, excepturi dolores asperiores quasi officia placeat dolorum cumque saepe!
     Alias minus nesciunt ducimus accusantium numquam itaque, ab quia corrupti autem vel quam nihil sit delectus voluptatibus harum cupiditate aspernatur magnam id error consectetur quasi est eos? Repellendus, animi quibusdam?</p>
