add bootstrap, resume download

--- a/projects.html
+++ b/projects.html
@@ -36,25 +36,33 @@
         </div>
       </nav>
     <br>
-    <p class="lead">Focus Boardgame &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Python, VSCode <a href="https://github.com/Morrow98J">GitHub</a></p>
-    <p>lorem ipsum dolor sit amet, consectet Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque laborum a tenetur dolorem deserunt quas, odio mollitia culpa est accusantium facilis esse aliquid sequi dolor eius enim maiores soluta rerum?
-    Iure tenetur consequuntur neque ut quos qui autem quis illo asperiores accusantium rerum quas atque doloremque, veritatis odit, enim sit dignissimos aliquid? Commodi possimus dolores laudantium sunt iure accusamus? Dolorum?
-    Autem ipsum, ipsa possimus atque labore, recusandae nemo odit saepe veritatis a eos architecto eius reprehenderit adipisci impedit explicabo debitis perspiciatis ratione esse ex. Consectetur nam molestias assumenda quos a?</p>
+    <p class="lead">Focus Boardgame &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Python, VSCode <a href="https://github.com/Morrow98J/Focus_Game">GitHub</a></p>
+    <div>
+        Command-line playable implementation of the board game Focus, also known as Domination. Game is
+playable with two players and instructions are included within the readme.</div><br><br>
 
-    <p class="lead">Low Level IO &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; MASM Assembly, Visual Studio 2019 <a href="https://github.com/Morrow98J">GitHub</a></p>
-    <p>lorem ipsum dolor sit amet, consectet Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque laborum a tenetur dolorem deserunt quas, odio mollitia culpa est accusantium facilis esse aliquid sequi dolor eius enim maiores soluta rerum?
-    Iure tenetur consequuntur neque ut quos qui autem quis illo asperiores accusantium rerum quas atque doloremque, veritatis odit, enim sit dignissimos aliquid? Commodi possimus dolores laudantium sunt iure accusamus? Dolorum?
-    Autem ipsum, ipsa possimus atque labore, recusandae nemo odit saepe veritatis a eos architecto eius reprehenderit adipisci impedit explicabo debitis perspiciatis ratione esse ex. Consectetur nam molestias assumenda quos a?</p>
+    <p class="lead">Low Level IO &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; MASM Assembly, Visual Studio 2019 <a href="https://github.com/Morrow98J/Low_Level_IO">GitHub</a></p>
+    <div>Assembly language implementation to get 10 signed 32-bit integer to be converted back and forth between
+        ASCII and SDWORD to display its sum and floor rounded average.</div><br><br>
 
-    <p class="lead">Harry Potter NLP Analysis &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Python, NumPy, Matplotlib, Jupyter Notebook <a href="https://github.com/Morrow98J">GitHub</a></p>
-    <p>lorem ipsum dolor sit amet, consectet Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque laborum a tenetur dolorem deserunt quas, odio mollitia culpa est accusantium facilis esse aliquid sequi dolor eius enim maiores soluta rerum?
-    Iure tenetur consequuntur neque ut quos qui autem quis illo asperiores accusantium rerum quas atque doloremque, veritatis odit, enim sit dignissimos aliquid? Commodi possimus dolores laudantium sunt iure accusamus? Dolorum?
-    Autem ipsum, ipsa possimus atque labore, recusandae nemo odit saepe veritatis a eos architecto eius reprehenderit adipisci impedit explicabo debitis perspiciatis ratione esse ex. Consectetur nam molestias assumenda quos a?</p>
+    <p class="lead">Harry Potter NLP Analysis &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Python, NumPy, Matplotlib, Jupyter Notebook <a href="https://github.com/Morrow98J/Harry_Potter_Analysis">GitHub</a></p>
+    <div>Data Science Natural Language Processing project that sorts and cleans 76,944 words for use in identifying
+        proper nouns to graph with Matplotlib.</div><br><br>
 
-    <p class="lead">This Website &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; HTML+CSS, JavaScript, Bootstrap, Github Atom <a href="https://github.com/Morrow98J">GitHub</a></p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut tempora optio perspiciatis? Nemo dolores nulla hic maiores est esse eveniet quo tempore aspernatur ipsam, sequi non asperiores, obcaecati ullam? Distinctio.
-    Accusamus natus, hic laudantium quo et voluptatem nihil harum, possimus quae asperiores voluptatibus accusantium corrupti, ex eius suscipit. Explicabo necessitatibus quam, excepturi dolores asperiores quasi officia placeat dolorum cumque saepe!
-    Alias minus nesciunt ducimus accusantium numquam itaque, ab quia corrupti autem vel quam nihil sit delectus voluptatibus harum cupiditate aspernatur magnam id error consectetur quasi est eos? Repellendus, animi quibusdam?</p>
+    <p class="lead">This Website &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; HTML+CSS, JavaScript, Bootstrap, Github Atom</p>
+    <div style="width:100%;height:200px;line-height:3em;overflow:auto;padding:5px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut tempora optio perspiciatis? Nemo dolores nulla hic maiores est esse eveniet quo tempore aspernatur ipsam, sequi non asperiores, obcaecati ullam? Distinctio.
+    Accusamus natus, hic laudantium quo et voluptatem nihil harum, possimus quae asperiores voluptatibus accusantium corrupti, ex eius suscipit. Explicabo necessitatibus quam, Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae rem veniam libero cupiditate tempore ut neque veritatis quam quia facilis voluptates commodi, ipsum impedit modi magni repellendus dolores quae! Laudantium?
+    Dolorem voluptatibus perspiciatis, ratione quis Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae rerum nulla, sed at cupiditate vel distinctio laudantium obcaecati similique sit molestias eaque ipsum provident inventore eum! Nulla dolor assumenda nemo?
+    Voluptate ducimus perferendis inventore consequatur. Illum tenetur saepe ipsa, fugiat quaerat soluta error ad eveniet? Consectetur necessitatibus delectus sit sequi pariatur dolor vitae deserunt omnis distinctio facere? Iure, cupiditate ut.
+    Aspernatur aperiam fugit quis ullam eos repellendus non! Illum nemo fugiat odit dignissimos mollitia reiciendis pariatur minima quidem dolorum harum, necessitatibus at quasi dolores deleniti odio consequuntur enim sapiente? Reiciendis.
+    Error debitis deserunt alias impedit, fuga, similique illum ab qui quas ipsum repellendus beatae. Doloremque saepe eaque voluptatum, eligendi officiis vitae voluptas delectus provident harum reprehenderit quidem iste doloribus earum.
+    Ullam impedit ipsum, alias ea omnis nemo placeat numquam, inventore, recusandae culpa atque aspernatur vero voluptatibus a qui quis. Dolor corrupti quidem alias non fugiat animi repellat consectetur possimus ut.
+    Sunt, sapiente! Velit obcaecati animi corrupti accusamus! Odio eaque harum inventore quis voluptatem. Dolorem, temporibus maiores. Explicabo, aliquid omnis dolore error maxime cum quam ea ducimus accusantium odit corrupti repudiandae.
+    Quod vel, aliquam neque veniam eos ipsam laudantium velit unde nesciunt et sint inventore non optio eum commodi, quisquam a consequuntur rerum delectus, laboriosam error. Explicabo error iure obcaecati rem.
+    Autem, reiciendis commodi? Id asperiores corporis, repudiandae facilis dolore soluta adipisci, illo at neque, autem nostrum suscipit ratione! Quae voluptates distinctio rerum veniam totam ducimus harum corrupti, animi ab eligendi?
+    Reiciendis voluptates et repellat distinctio possimus modi voluptatum repellendus, sint culpa numquam molestias, pariatur, quibusdam veritatis iste quisquam eaque? Quae iste, voluptate dolorem voluptatum recusandae provident harum optio perspiciatis amet.
+    Eum tempora reiciendis doloribus voluptate obcaecati deserunt cumque excepturi accusamus ab dolorum adipisci quod, sed esse velit blanditiis consequatur corporis, omnis aut est alias sint incidunt rem quibusdam suscipit. Rem? amet ipsa reiciendis repellat iusto? Ipsa autem cum pariatur consequuntur molestias dolores, at quas maxime nostrum ab perspiciatis quos in eum? Labore vitae maiores rem? excepturi dolores asperiores quasi officia placeat dolorum cumque saepe!
+    Alias minus nesciunt ducimus accusantium numquam itaque, ab quia corrupti autem vel quam nihil sit delectus voluptatibus harum cupiditate aspernatur magnam id error consectetur quasi est eos? Repellendus, animi quibusdam?</div>
     <div id="root"></div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
         integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous">
