--- a/experience.html
+++ b/experience.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
+    <title>Experience</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" title="Cool stylesheet" href="style.css">
@@ -62,6 +62,7 @@
             <ul><li>B.S. in Psychology</li>
                 <li>Minor in Informatics</li>
                 <li>GPA: 3.08</li></ul>
+                <div class="d-flex justify-content-center"> <a href="resume.pdf" download="resumeMorrow" class="btn btn-primary">Download Resume</a></div>
     </main>
     <div id="root"></div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
