--- a/index.html
+++ b/index.html
@@ -36,7 +36,14 @@
       </ul>
     </div>
   </nav>
- 
+  
+  <div class="container">
+    <div class="jumbotron">
+      <h2 class="display-6">Portfolio Website</h2> 
+      <p class="lead">Using HTML+CSS, JavaScript, Bootstrap.</p>
+    </div>
+    <p class="lead">Winter 2021</p>
+  </div>
   <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
