--- a/aboutMe.html
+++ b/aboutMe.html
@@ -2,54 +2,62 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Me</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" title="Cool stylesheet" href="style.css">
+  <link rel="stylesheet" type="text/css" title="Cool stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1 class="display-1">Jacob Morrow</h1>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link"href="projects.html">Projects</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="experience.html">Experience</a>
-            </li>
-    
-            <li class="nav-item">
-              <a class="nav-link" href="#">About Me</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    <br>
-    <main>
-        <img src="imgs/profile.png" alt="picture of myself outside Japan House @ UIUC"  class="img-circle">
-        <p class="lead">B.S. in Psychology with a minor in Informatics from the University of Illinois: Urbana-Champaign. Strong academic background with Python and R, alongside experience with HTML+CSS, and JavaScript. Driven by the foundations established through Informatics, currently completing a B.S. in Computer Science at Oregon State University and set to graduate in 2022.</p>
-    <p class="lead">In my free time, I am passionate about computer hardware and enjoy working with the PC I built. I’m also currently spending my time printing on my Ender 3, FDM 3D printer, learning how to best realize its potential.</p></main>
-    
-    <div id="root"></div>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
-        integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js"
-        integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous">
-    </script>
+  <h1 class="display-1">Jacob Morrow</h1>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="projects.html">Projects</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="experience.html">Experience</a>
+        </li>
 
-    <script src="main.js" type="text/javascript"></script>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About Me</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <br>
+  <main>
+    <div class="d-flex justify-content-center"><img src="imgs/profile.png" alt="picture of myself outside Japan House @ UIUC" class="img-thumbnail"></div>
+    <p class="lead">B.S. in Psychology with a minor in Informatics from the University of Illinois: Urbana-Champaign.
+      Strong academic background with Python and R, alongside experience with HTML+CSS, and JavaScript. Driven by the
+      foundations established through Informatics, currently completing a B.S. in Computer Science at Oregon State
+      University and set to graduate in 2022.</p>
+    <p class="lead">In my free time, I am passionate about computer hardware and enjoy working with the PC I built. I’m
+      also currently spending my time printing on my Ender 3, FDM 3D printer, learning how to best realize its
+      potential.</p>
+  </main>
+
+  <div id="root"></div>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
+    integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js"
+    integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous">
+  </script>
+
+  <script src="main.js" type="text/javascript"></script>
 </body>
 
 </html>
