add form, github link

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -48,7 +48,15 @@
       also currently spending my time printing on my Ender 3, FDM 3D printer, learning how to best realize its
       potential.</p>
   </main>
-
+  
+  <form>
+    <div class="form-group">
+      <label for="exampleInputEmail1">Email address</label>
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+      <small id="emailHelp" class="form-text text-muted">I'll never share your email with anyone else.</small>
+    </div>
+    <button type="submit" class="btn btn-primary">submit</button>
+  </form>
   <div id="root"></div>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
     integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous">
