--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
 
   <p class="lead">This Website
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; HTML+CSS, JavaScript,
-    Bootstrap, Github Atom</p>
+    Bootstrap, Github Atom <a href="https://github.com/Morrow98J/Web_Portfolio">GitHub</a></p>
   <div style="width:100%;height:200px;line-height:3em;overflow:auto;padding:5px;">Lorem ipsum dolor sit amet consectetur
     adipisicing elit. Aut tempora optio perspiciatis? Nemo dolores nulla hic maiores est esse eveniet quo tempore
     aspernatur ipsam, sequi non asperiores, obcaecati ullam? Distinctio.
