--- a/experience.html
+++ b/experience.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Experience</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet"> 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
@@ -39,8 +41,8 @@
   </nav>
   <br>
   <main>
-    <h4 class="display-9">&nbsp;Work</h4>
-
+    <h4 class="display-9">&nbsp;Experience</h4>
+    <hr/>
     <p class="lead">&nbsp;University of Illinois: Urbana-Champaign</p>
 
     <p class="lead">&nbsp;Research Intern
@@ -60,7 +62,9 @@
         <li>Coordinated meetings Sunday-Thursday focused on house maintenance and improvements</li>
       </ul>
       </li>
+      <hr/>
       <h4 class="display-8">&nbsp;Education</h5>
+        <hr/>
         <p class="lead">&nbsp;Oregon State University</p>
         <ul>
           <li>B.S. in Computer Science</li>
@@ -78,6 +82,9 @@
             class="btn btn-primary">Download Resume</a></div>
   </main>
   <div id="root"></div>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
     integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous">
   </script>
