--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Home</title>
   <link rel="preconnect" href="https://fonts.gstatic.com" />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous" />
 
@@ -47,7 +47,7 @@
       <div class="row">
         <div class="col">
           <div class="card" style="width: 10rem">
-            <img class="card-img-top" src="imgs/html5.png" alt="Card image cap" />
+            <img class="card-img-top" src="imgs/html5.png" alt="html5 logo" />
             <div class="card-body">
               <h5 class="card-title">HTML+CSS</h5>
             </div>
@@ -55,7 +55,7 @@
         </div>
         <div class="col">
           <div class="card" style="width: 10rem">
-            <img class="card-img-top" src="imgs/js.png" alt="Card image cap" />
+            <img class="card-img-top" src="imgs/js.png" alt="javascript logo" />
             <div class="card-body">
               <h5 class="card-title">JavaScript</h5>
             </div>
@@ -63,7 +63,7 @@
         </div>
         <div class="col">
           <div class="card" style="width: 10rem">
-            <img class="card-img-top" src="imgs/bootstrap.png" alt="Card image cap" />
+            <img class="card-img-top" src="imgs/bootstrap.png" alt="bootstrap logo" />
             <div class="card-body">
               <h5 class="card-title">Bootstrap</h5>
             </div>
@@ -123,6 +123,9 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+  <div class="d-flex justify-content-center">
+    <p class="lead">Winter 2021</p>
+  </div>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
   </script>
@@ -137,9 +140,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
   </script>
-  <div class="d-flex justify-content-center">
-    <p class="lead">Winter 2021</p>
-  </div>
+
 </body>
 
 </html>
