--- a/index.html
+++ b/index.html
@@ -23,16 +23,19 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
+        <!--add home navigation link-->
         <li class="nav-item active">
           <a class="nav-link" href="#">Home</a>
         </li>
+        <!--add projects navigation link-->
         <li class="nav-item">
           <a class="nav-link" href="projects.html">Projects</a>
         </li>
+        <!--add experience navigation link-->
         <li class="nav-item">
           <a class="nav-link" href="experience.html">Experience</a>
         </li>
-
+        <!--add about me navigation link-->
         <li class="nav-item">
           <a class="nav-link" href="aboutMe.html">About Me</a>
         </li>
@@ -46,24 +49,27 @@
       <p class="lead">Built to be dynamic and responsive using</p>
       <div class="row">
         <div class="col">
+          <!--add left card to div-->
           <div class="card" style="width: 10rem">
-            <img class="card-img-top" src="imgs/html5.png" alt="html5 logo" />
+            <img class="card-img-top" src="imgs/html5.png" alt="html5 icon: https://www.flaticon.com/free-icon/html5_1216733" />
             <div class="card-body">
               <h5 class="card-title">HTML+CSS</h5>
             </div>
           </div>
         </div>
         <div class="col">
+          <!--add center card to div-->
           <div class="card" style="width: 10rem">
-            <img class="card-img-top" src="imgs/js.png" alt="javascript logo" />
+            <img class="card-img-top" src="imgs/js.png" alt="javascript icon: https://icon-icons.com/icon/javascript/130900" />
             <div class="card-body">
               <h5 class="card-title">JavaScript</h5>
             </div>
           </div>
         </div>
         <div class="col">
+          <!--add right card to div-->
           <div class="card" style="width: 10rem">
-            <img class="card-img-top" src="imgs/bootstrap.png" alt="bootstrap logo" />
+            <img class="card-img-top" src="imgs/bootstrap.png" alt="bootstrap icon: https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Bootstrap_logo.svg/800px-Bootstrap_logo.svg.png" />
             <div class="card-body">
               <h5 class="card-title">Bootstrap</h5>
             </div>
@@ -123,9 +129,11 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+
   <div class="d-flex justify-content-center">
     <p class="lead">Winter 2021</p>
   </div>
+  
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
   </script>
