--- a/aboutMe.html
+++ b/aboutMe.html
@@ -23,22 +23,26 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
+        <!--add home navigation link-->
         <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link" href="#">Home</a>
         </li>
+        <!--add projects navigation link-->
         <li class="nav-item">
           <a class="nav-link" href="projects.html">Projects</a>
         </li>
+        <!--add experience navigation link-->
         <li class="nav-item">
           <a class="nav-link" href="experience.html">Experience</a>
         </li>
-
+        <!--add about me navigation link-->
         <li class="nav-item">
-          <a class="nav-link" href="#">About Me</a>
+          <a class="nav-link" href="aboutMe.html">About Me</a>
         </li>
       </ul>
     </div>
   </nav>
+  
   <br>
   <main>
     <div class="d-flex justify-content-center"><img src="imgs/profile.png" alt="picture of myself outside Japan House @ UIUC" class="img-thumbnail"></div>
