--- a/projects.html
+++ b/projects.html
@@ -25,11 +25,11 @@
       <ul class="navbar-nav">
         <!--add home navigation link-->
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" href="index.html">Home</a>
         </li>
         <!--add projects navigation link-->
         <li class="nav-item">
-          <a class="nav-link" href="projects.html">Projects</a>
+          <a class="nav-link" href="#">Projects</a>
         </li>
         <!--add experience navigation link-->
         <li class="nav-item">
@@ -42,7 +42,7 @@
       </ul>
     </div>
   </nav>
-  
+
   <br>
   <p class="lead">Focus Boardgame
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Python, VSCode <a
