--- a/experience.html
+++ b/experience.html
@@ -25,7 +25,7 @@
       <ul class="navbar-nav">
         <!--add home navigation link-->
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" href="index.html">Home</a>
         </li>
         <!--add projects navigation link-->
         <li class="nav-item">
@@ -33,7 +33,7 @@
         </li>
         <!--add experience navigation link-->
         <li class="nav-item">
-          <a class="nav-link" href="experience.html">Experience</a>
+          <a class="nav-link" href="#">Experience</a>
         </li>
         <!--add about me navigation link-->
         <li class="nav-item">
@@ -42,7 +42,7 @@
       </ul>
     </div>
   </nav>
-  
+
   <br>
   <main>
     <h4 class="display-9">&nbsp;Experience</h4>
