--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
         <div class="col">
           <!--add left card to div-->
           <div class="card" style="width: 10rem">
-            <img class="card-img-top" src="imgs/html5.png" alt="html5 icon: https://www.flaticon.com/free-icon/html5_1216733" />
+            <img class="card-img-top" src="imgs/html5.png"
+              alt="html5 icon: https://www.flaticon.com/free-icon/html5_1216733" />
             <div class="card-body">
               <h5 class="card-title">HTML+CSS</h5>
             </div>
@@ -60,7 +61,8 @@
         <div class="col">
           <!--add center card to div-->
           <div class="card" style="width: 10rem">
-            <img class="card-img-top" src="imgs/js.png" alt="javascript icon: https://icon-icons.com/icon/javascript/130900" />
+            <img class="card-img-top" src="imgs/js.png"
+              alt="javascript icon: https://icon-icons.com/icon/javascript/130900" />
             <div class="card-body">
               <h5 class="card-title">JavaScript</h5>
             </div>
@@ -69,7 +71,8 @@
         <div class="col">
           <!--add right card to div-->
           <div class="card" style="width: 10rem">
-            <img class="card-img-top" src="imgs/bootstrap.png" alt="bootstrap icon: https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Bootstrap_logo.svg/800px-Bootstrap_logo.svg.png" />
+            <img class="card-img-top" src="imgs/bootstrap.png"
+              alt="bootstrap icon: https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Bootstrap_logo.svg/800px-Bootstrap_logo.svg.png" />
             <div class="card-body">
               <h5 class="card-title">Bootstrap</h5>
             </div>
@@ -133,7 +136,7 @@
   <div class="d-flex justify-content-center">
     <p class="lead">Winter 2021</p>
   </div>
-  
+
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
   </script>
