--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Projects</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
@@ -50,19 +50,19 @@
   <div>
     Command-line playable implementation of the board game Focus, also known as Domination. Game is
     playable with two players and instructions are included within the readme.</div><br><br>
-    <hr/>
+  <hr />
   <p class="lead">Low Level IO
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; MASM Assembly, Visual
     Studio 2019 <a href="https://github.com/Morrow98J/Low_Level_IO">GitHub</a></p>
   <div>Assembly language implementation to get 10 signed 32-bit integer to be converted back and forth between
     ASCII and SDWORD to display its sum and floor rounded average.</div><br><br>
-    <hr/>
+  <hr />
   <p class="lead">Harry Potter NLP Analysis
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Python, NumPy,
     Matplotlib, Jupyter Notebook <a href="https://github.com/Morrow98J/Harry_Potter_Analysis">GitHub</a></p>
   <div>Data Science Natural Language Processing project that sorts and cleans 76,944 words for use in identifying
     proper nouns to graph with Matplotlib.</div><br><br>
-    <hr/>
+  <hr />
   <p class="lead">This Website
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; HTML+CSS, JavaScript,
     Bootstrap, Github Atom <a href="https://github.com/Morrow98J/Web_Portfolio">GitHub</a></p>
@@ -85,16 +85,30 @@
     Error debitis deserunt alias impedit, fuga, similique illum ab qui quas ipsum repellendus beatae. Doloremque saepe
     eaque voluptatum, eligendi officiis vitae voluptas delectus provident harum reprehenderit quidem iste doloribus
     earum.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Error tempore molestias ducimus sint. Quo, id. Optio amet modi suscipit, eos, magnam cumque, non omnis veniam rem odit inventore natus. Quas.
-    Aut, recusandae consectetur distinctio enim alias harum qui veritatis itaque est odio cumque hic necessitatibus a neque illo aliquam blanditiis aspernatur facilis, voluptatum reiciendis? Omnis beatae fugit excepturi corporis soluta.
-    Corrupti maiores perferendis voluptatibus! Omnis, odio aut iure atque itaque fugit quae aliquam sed magnam, explicabo ut asperiores harum ipsum! Id, iste quo recusandae optio fuga dicta nobis? Architecto, voluptate.
-    Blanditiis iusto magnam adipisci voluptatem vero perspiciatis quasi eveniet mollitia id earum modi, alias nam. Nulla voluptas sequi, doloribus, porro explicabo cupiditate sunt impedit animi temporibus omnis dignissimos eius ex!
-    Modi aliquam perspiciatis cum, hic dignissimos, et adipisci earum laboriosam itaque culpa suscipit quas placeat a, vitae repudiandae sint fugiat dolor voluptates? Aliquid repellendus dignissimos porro tenetur! Quae, eaque ducimus.
-    Praesentium beatae, vero rem ipsum, magnam pariatur neque explicabo ipsam sed perspiciatis incidunt harum, modi doloribus ipsa suscipit ut? Fugiat non labore ea reiciendis laboriosam at eveniet perferendis facere ratione!
-    Similique laboriosam ipsam vero, reprehenderit ea dolorum autem quisquam eos est esse atque eum nisi. A voluptatum accusamus quo culpa magnam enim alias vel architecto similique, maiores repellat, pariatur earum?
-    Provident commodi maiores omnis, voluptatum impedit nisi laborum fugit tempora excepturi modi ipsum voluptate assumenda eos nihil distinctio temporibus quam ab dolore voluptatem incidunt laboriosam? Doloremque inventore odio enim praesentium.
-    Fuga quos quam molestiae neque molestias temporibus fugiat cumque a, illum similique suscipit inventore debitis assumenda rem fugit reprehenderit necessitatibus iusto consectetur ratione, vero id nobis corporis. Incidunt, magnam quis.
-    Cupiditate non sapiente atque inventore doloribus. Numquam soluta nostrum commodi perferendis iusto quo cumque inventore! Suscipit minus explicabo laborum sequi officia ut, veritatis nostrum repellat accusantium. Consequuntur reiciendis pariatur voluptatum.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Error tempore molestias ducimus sint. Quo, id. Optio amet
+    modi suscipit, eos, magnam cumque, non omnis veniam rem odit inventore natus. Quas.
+    Aut, recusandae consectetur distinctio enim alias harum qui veritatis itaque est odio cumque hic necessitatibus a
+    neque illo aliquam blanditiis aspernatur facilis, voluptatum reiciendis? Omnis beatae fugit excepturi corporis
+    soluta.
+    Corrupti maiores perferendis voluptatibus! Omnis, odio aut iure atque itaque fugit quae aliquam sed magnam,
+    explicabo ut asperiores harum ipsum! Id, iste quo recusandae optio fuga dicta nobis? Architecto, voluptate.
+    Blanditiis iusto magnam adipisci voluptatem vero perspiciatis quasi eveniet mollitia id earum modi, alias nam. Nulla
+    voluptas sequi, doloribus, porro explicabo cupiditate sunt impedit animi temporibus omnis dignissimos eius ex!
+    Modi aliquam perspiciatis cum, hic dignissimos, et adipisci earum laboriosam itaque culpa suscipit quas placeat a,
+    vitae repudiandae sint fugiat dolor voluptates? Aliquid repellendus dignissimos porro tenetur! Quae, eaque ducimus.
+    Praesentium beatae, vero rem ipsum, magnam pariatur neque explicabo ipsam sed perspiciatis incidunt harum, modi
+    doloribus ipsa suscipit ut? Fugiat non labore ea reiciendis laboriosam at eveniet perferendis facere ratione!
+    Similique laboriosam ipsam vero, reprehenderit ea dolorum autem quisquam eos est esse atque eum nisi. A voluptatum
+    accusamus quo culpa magnam enim alias vel architecto similique, maiores repellat, pariatur earum?
+    Provident commodi maiores omnis, voluptatum impedit nisi laborum fugit tempora excepturi modi ipsum voluptate
+    assumenda eos nihil distinctio temporibus quam ab dolore voluptatem incidunt laboriosam? Doloremque inventore odio
+    enim praesentium.
+    Fuga quos quam molestiae neque molestias temporibus fugiat cumque a, illum similique suscipit inventore debitis
+    assumenda rem fugit reprehenderit necessitatibus iusto consectetur ratione, vero id nobis corporis. Incidunt, magnam
+    quis.
+    Cupiditate non sapiente atque inventore doloribus. Numquam soluta nostrum commodi perferendis iusto quo cumque
+    inventore! Suscipit minus explicabo laborum sequi officia ut, veritatis nostrum repellat accusantium. Consequuntur
+    reiciendis pariatur voluptatum.
 
     Ullam impedit ipsum, alias ea omnis nemo placeat numquam, inventore, recusandae culpa atque aspernatur vero
     voluptatibus a qui quis. Dolor corrupti quidem alias non fugiat animi repellat consectetur possimus ut.
@@ -116,13 +130,19 @@
     Alias minus nesciunt ducimus accusantium numquam itaque, ab quia corrupti autem vel quam nihil sit delectus
     voluptatibus harum cupiditate aspernatur magnam id error consectetur quasi est eos? Repellendus, animi quibusdam?
   </div>
-    <br>
-    <div class="d-flex justify-content-center">
+  <br>
+  <div class="d-flex justify-content-center">
     <p class="lead">Winter 2021</p>
-    </div>
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  </div>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
+  </script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
     integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous">
   </script>
