update giant picture

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -45,8 +45,8 @@
 
   <br>
   <main>
-    <div class="d-flex justify-content-center"><img src="imgs/profile.png"
-        alt="picture of myself outside Japan House @ UIUC" class="img-thumbnail"></div>
+    <div class="container-md justify-content-center"><img src="imgs/profile.png"
+        alt="picture of myself outside Japan House @ UIUC" class="img-thumbnail">
     <p class="lead">B.S. in Psychology with a minor in Informatics from the University of Illinois: Urbana-Champaign.
       Strong academic background with Python and R, alongside experience with HTML+CSS, and JavaScript. Driven by the
       foundations established through Informatics, currently completing a B.S. in Computer Science at Oregon State
@@ -54,6 +54,7 @@
     <p class="lead">In my free time, I am passionate about computer hardware and enjoy working with the PC I built. I’m
       also currently spending my time printing on my Ender 3, FDM 3D printer, learning how to best realize its
       potential.</p>
+    </div>
   </main>
   <br>
   <form>
