center profile img

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -45,8 +45,9 @@
 
   <br>
   <main>
-    <div class="container-md justify-content-center"><img src="imgs/profile.png"
-        alt="picture of myself outside Japan House @ UIUC" class="img-thumbnail">
+    <div class="d-flex justify-content-center"><img src="imgs/profile.png"
+        alt="picture of myself outside Japan House @ UIUC" class="img-thumbnail"></div>
+        <div class="container justify-content-center">
     <p class="lead">B.S. in Psychology with a minor in Informatics from the University of Illinois: Urbana-Champaign.
       Strong academic background with Python and R, alongside experience with HTML+CSS, and JavaScript. Driven by the
       foundations established through Informatics, currently completing a B.S. in Computer Science at Oregon State
