change email input size

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -55,9 +55,10 @@
     <p class="lead">In my free time, I am passionate about computer hardware and enjoy working with the PC I built. I’m
       also currently spending my time printing on my Ender 3, FDM 3D printer, learning how to best realize its
       potential.</p>
-    </div>
+    
   </main>
   <br>
+  <div class="container-sm">
   <form>
     <div class="form-group">
       <label for="exampleInputEmail1">Email address</label>
@@ -66,6 +67,7 @@
     </div>
     <button type="submit" class="btn btn-primary" id="emailSubmit">submit</button>
   </form>
+</div>
   <br>
   <div class="d-flex justify-content-center">
     <p class="lead">Winter 2021</p>
